Lesson5_1.ipynb再次修改再次修改

--- a/Lesson5/Lesson5_1.ipynb
+++ b/Lesson5/Lesson5_1.ipynb
@@ -52,6 +52,23 @@
    "source": [
     "print(\"Hello! git!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! gitagain!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello! gitagain!\")"
+   ]
   }
  ],
  "metadata": {
