--- a/Lesson5/Lesson5_1.ipynb
+++ b/Lesson5/Lesson5_1.ipynb
@@ -69,6 +69,23 @@
    "source": [
     "print(\"Hello! gitagain!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello GITTT\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello GITTT\")"
+   ]
   }
  ],
  "metadata": {
