--- a/Lesson7/Lesson7_02.ipynb
+++ b/Lesson7/Lesson7_02.ipynb
@@ -216,7 +216,9 @@
     }
    ],
    "source": [
+    "#資料結構\n",
     "#dict --->關鍵字對應值\n",
+    "#dict  {'keyword':'valaue','keyword':'valaue'}\n",
     "\n",
     "Codes:dict[str,str] = {'tw':'Taiwan','jp':'Japan'}\n",
     "Codes"
@@ -278,6 +280,9 @@
     }
    ],
    "source": [
+    "#dict\n",
+    "\n",
+    "\n",
     "dict((('tw','Taiwan'),('jp','Japan')))"
    ]
   },
@@ -299,7 +304,7 @@
    ],
    "source": [
     "#set\n",
-    "#Set ｛元素,元素｝\n",
+    "#Set ｛元素,元素｝-使用 大括號｛ ｝\n",
     "#*元素不可以重複(只會顯示唯一值）\n",
     "#*可集合運算（滿足多條件）\n",
     "#（＊無序號的特性，可結合List應用）\n",
