--- a/Lesson7/Lesson7_03.ipynb
+++ b/Lesson7/Lesson7_03.ipynb
@@ -17,6 +17,14 @@
     }
    ],
    "source": [
+    "#class Person() :\n",
+    "# ——>生產((__init___())  Person的實體(instance)\n",
+    "#Person的實體(instance)以下3點\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "class Person():\n",
     "    pass\n",
     "\n",
