--- a/Lesson8/Lesson8_01.ipynb
+++ b/Lesson8/Lesson8_01.ipynb
@@ -251,6 +251,11 @@
     }
    ],
    "source": [
+    "\n",
+    "# property\n",
+    "# 只能讀取以及檢查輸出／入的資料，不能更改\n",
+    "\n",
+    "\n",
     "#父類別\n",
     "class Person():\n",
     "    def __init__(self,n:str) -> None:\n",
@@ -310,6 +315,121 @@
     "#s1.english = 100   --->無法執行\n",
     "#s1.math = 100      --->無法執行\n",
     "print(s1.name)\n",
+    "print(s1)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "s2 = Student(\"Ivy\",90,90,90)\n",
+    "print(s2.name)\n",
+    "print(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class '__main__.Student'>\n",
+      "徐國堂\n",
+      "總分:277\n",
+      "平均:92.33\n",
+      "這是Student的實體\n",
+      "我的姓名是徐國堂\n",
+      "國文：96\n",
+      "英文：89\n",
+      "數學：92\n",
+      "\n",
+      "Ivy\n",
+      "這是Student的實體\n",
+      "我的姓名是Ivy\n",
+      "國文：90\n",
+      "英文：90\n",
+      "數學：90\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#method\n",
+    "#實體的功能\n",
+    "\n",
+    "\n",
+    "#父類別\n",
+    "class Person():\n",
+    "    def __init__(self,n:str) -> None:\n",
+    "        self . name = n  #name=attribute\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"這是Person的實體，我的名字是{self.name}\"\n",
+    "    \n",
+    "\n",
+    "\n",
+    "#子類別\n",
+    "class Student(Person):\n",
+    "     def __init__(self,name:str,chinese:int,english:int,math:int) -> None:\n",
+    "         super().__init__(name)    #super\n",
+    "         self.__chinese = chinese    #___鎖定\n",
+    "         self.__english = english    #___鎖定\n",
+    "         self.__math = math          #___鎖定\n",
+    "\n",
+    "\n",
+    "    # @property 只能讀取以及檢查輸出／入的資料，不能更改\n",
+    "\n",
+    "     @property\n",
+    "     def chinese(self):\n",
+    "        return self .__chinese\n",
+    "     \n",
+    "     @property\n",
+    "     def english(self):\n",
+    "        return self .__english\n",
+    "     \n",
+    "     @property\n",
+    "     def math(self):\n",
+    "        return self .__math\n",
+    "     \n",
+    "\n",
+    "\n",
+    "\n",
+    "    # message字串可相加 +=\n",
+    "    # \\n 換行\n",
+    "\n",
+    "     def __repr__(self):\n",
+    "        message = \"\"\n",
+    "        message += \"這是Student的實體\\n\"\n",
+    "        message += f\"我的姓名是{self.name}\\n\"\n",
+    "        message += f\"國文：{self.chinese}\\n\"\n",
+    "        message += f\"英文：{self.english}\\n\"\n",
+    "        message += f\"數學：{self.math}\\n\"\n",
+    "        return message\n",
+    "     \n",
+    "\n",
+    "     #method 實體功能\n",
+    "     def sum(self) -> int:\n",
+    "         return self.chinese + self.english + self.math\n",
+    "     \n",
+    "     def average(self) -> float:\n",
+    "         return self.sum()/3\n",
+    "\n",
+    "\n",
+    "\n",
+    "s1 = Student(\"徐國堂\",96,89,92)  #--->第一種呈現\n",
+    "print(type(s1))\n",
+    "\n",
+    "\n",
+    "#若使用@property鎖定將無法在class外更改數值\n",
+    "#s1.chinese = 100   --->無法執行\n",
+    "#s1.english = 100   --->無法執行\n",
+    "#s1.math = 100      --->無法執行\n",
+    "print(s1.name)\n",
+    "\n",
+    "#method 實體功能\n",
+    "print(f\"總分:{s1.sum()}\")\n",
+    "print(f\"平均:{round(s1.average(),ndigits=2)}\")\n",
     "print(s1)\n",
     "\n",
     "\n",
