--- a/Lesson8/Lesson8_02.ipynb
+++ b/Lesson8/Lesson8_02.ipynb
@@ -6,6 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dataclasses\n",
+    "#程式自動寫出 __init__  /  __repr__\n",
+    "\n",
+    "\n",
     "from dataclasses import dataclass\n",
     "\n",
     "@dataclass\n",
