--- a/Lesson8/class_BMI.ipynb
+++ b/Lesson8/class_BMI.ipynb
@@ -9,8 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello i y\n",
-      "請輸入正確的身高/體重\n",
+      "Hello Ivy\n",
+      "您的BMI值為： 17.42\n",
+      "『體重過輕』需均衡飲食，補充營養！\n",
       "----END----\n"
      ]
     }
@@ -59,14 +60,12 @@
     "        print('格式錯誤')\n",
     "\n",
     "\n",
-    "print(\"----END----\")\n",
-    "\n",
-    "\n"
+    "print(\"----END----\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -98,36 +97,32 @@
     "            print('請輸入正確的身高/體重')\n",
     "            raise\n",
     "        else:\n",
-    "          \n",
     "            self.calculate_BMI()\n",
-    "           \n",
     "\n",
     "    def calculate_BMI(self):\n",
-    "        print(f\"{self.name} 您好！,BMI: {self.BMI_result},體重:{self.BMI_txt()}\")  \n",
+    "        bmi_result = round(self.weight / ((self.height / 100) ** 2), 1)\n",
+    "        bmi_txt = self.get_BMI_txt(bmi_result)\n",
+    "        print(f\"{self.name} 您好！,BMI: {bmi_result},體重:{bmi_txt}\")  \n",
     "    \n",
-    "    @property\n",
-    "    def BMI_result(self) -> float:\n",
-    "        return round(self.weight / ((self.height / 100) ** 2), 1)\n",
-    "   \n",
-    "    def BMI_txt(self) -> str:\n",
-    "        if self.BMI_result < 18.5:\n",
+    "    def get_BMI_txt(self, bmi_result: float) -> str:\n",
+    "        if bmi_result < 18.5:\n",
     "            return \"『體重過輕』需均衡飲食，補充營養！\"\n",
-    "        elif 18.5 <= self.BMI_result < 24:\n",
+    "        elif 18.5 <= bmi_result < 24:\n",
     "            return \"『健康體重』優秀，請繼續保持!\"\n",
-    "        elif 24 <= self.BMI_result < 27:\n",
+    "        elif 24 <= bmi_result < 27:\n",
     "            return \"『體重過重』請開始實施健康管理計畫囉！\"\n",
-    "        elif 27 <= self.BMI_result < 30:\n",
+    "        elif 27 <= bmi_result < 30:\n",
     "            return \"『輕度肥胖』\"\n",
-    "        elif 30 <= self.BMI_result < 35:\n",
+    "        elif 30 <= bmi_result < 35:\n",
     "            return \"『中度肥胖』\"\n",
     "        else:\n",
     "            return \"『重度肥胖』\"\n",
+    "        \n",
     "\n",
-    "try:\n",
-    "    bmi = BMI()\n",
+    "bmi_instance = BMI()\n",
     "\n",
-    "except Exception:\n",
-    "    print('格式錯誤')"
+    "\n",
+    "\n"
    ]
   }
  ],
