--- a/Lesson10/Lesson10_02.ipynb
+++ b/Lesson10/Lesson10_02.ipynb
@@ -6,6 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#pydantic\n",
+    "#BaseModel\n",
+    "\n",
+    "\n",
+    "\n",
     "from pydantic import BaseModel\n",
     "\n",
     "class Person(BaseModel):\n",
@@ -40,9 +45,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person(first_name='John', last_name='Smith', age=42)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p2 = Person(first_name='John', last_name='Smith', age='42')\n",
     "p2"
@@ -65,6 +81,9 @@
     }
    ],
    "source": [
+    "# try:----except\n",
+    "# print(e)\n",
+    "\n",
     "try:\n",
     "    p3 = Person(first_name='John', last_name='Smith', age='42a')\n",
     "    print(p3)\n",
@@ -89,6 +108,9 @@
     }
    ],
    "source": [
+    "\n",
+    "# _____.model_validate()\n",
+    "\n",
     "data:dict = {\n",
     "    \"first_name\": \"John\",\n",
     "    \"last_name\": \"Smith\",\n",
@@ -116,6 +138,9 @@
     }
    ],
    "source": [
+    "# '''   {        '''}         \n",
+    "# model_validate_json 驗證json黨\n",
+    "\n",
     "data_json:str = '''\n",
     "{\n",
     "    \"first_name\": \"John\",\n",
@@ -125,6 +150,181 @@
     "'''\n",
     "p5 = Person.model_validate_json(data_json)\n",
     "p5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person(first_name='John', last_name=None, age=18)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    first_name:str   #require\n",
+    "    last_name:str | None = None  #optional (有default值)\n",
+    "    age:int  = 18 #optional (有default值)\n",
+    "\n",
+    "\n",
+    "data_json:str = '''\n",
+    "{\n",
+    "    \"first_name\": \"John\"\n",
+    "   }\n",
+    "'''\n",
+    "p6 = Person.model_validate_json(data_json)\n",
+    "p6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person(first_name='John', Last_name=None, age=42, lucky_numbers=[1, 3, 5, 7, 9])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person(BaseModel):\n",
+    "    first_name:str\n",
+    "    Last_name:str | None = None\n",
+    "    age:int = 18\n",
+    "    lucky_numbers:list[int]\n",
+    "\n",
+    "data_json:str = '''\n",
+    "{\n",
+    "    \"first_name\":\"John\",\n",
+    "    \"last_name\":\"Smith\",\n",
+    "    \"age\":42,\n",
+    "    \"lucky_numbers\":[1,3,5,7,9]\n",
+    "\n",
+    "}'''\n",
+    "\n",
+    "p7 = Person.model_validate_json(data_json)\n",
+    "p7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person(id_=100, first_name='John', last_name='Smith', age=42)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 資料轉換\n",
+    "\n",
+    "\n",
+    "from pydantic import BaseModel,Field\n",
+    "\n",
+    "\n",
+    "#json檔案的資料型態\n",
+    "data:str = '''\n",
+    "{\n",
+    "    \"id\":100,\n",
+    "    \"First Name\":\"John\",\n",
+    "    \"LASTNAME\":\"Smith\",\n",
+    "    \"age in years\": 42\n",
+    "}\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 資料型態轉換\n",
+    "class Person(BaseModel):\n",
+    "    id_:int = Field(alias=\"id\")\n",
+    "    first_name:str = Field(alias='First Name')\n",
+    "    last_name:str | None = Field(alias='LASTNAME',default=None)\n",
+    "    age:int = Field(alias='age in years',default=18)\n",
+    "\n",
+    "p8 = Person.model_validate_json(data)\n",
+    "p8\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first_name='Arthur' last_name='Clarke' born=Born(place=Place(country='Lunar Colony', city='Central City'), date='2001-01-01')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Lunar Colony'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = '''\n",
+    "{\n",
+    "    \"firstName\": \"Arthur\",\n",
+    "    \"lastName\": \"Clarke\",\n",
+    "    \"born\":{\n",
+    "        \"place\":{\n",
+    "            \"country\":\"Lunar Colony\",\n",
+    "            \"city\": \"Central City\"\n",
+    "        },\n",
+    "        \"date\":\"2001-01-01\"\n",
+    "    }\n",
+    "}\n",
+    "'''\n",
+    "\n",
+    "class Place(BaseModel):\n",
+    "    country:str\n",
+    "    city:str\n",
+    "\n",
+    "class Born(BaseModel):\n",
+    "    place:Place\n",
+    "    date:str\n",
+    "\n",
+    "class Person(BaseModel):\n",
+    "    first_name:str = Field(alias='firstName')\n",
+    "    last_name:str = Field(alias='lastName')\n",
+    "    born:Born\n",
+    "\n",
+    "\n",
+    "p9 = Person.model_validate_json(data)\n",
+    "print(p9)\n",
+    "p9.born.place.city\n",
+    "p9.born.place.country\n"
    ]
   }
  ],
