--- a/Lesson10/Lesson10_03.ipynb
+++ b/Lesson10/Lesson10_03.ipynb
@@ -1013,6 +1013,8 @@
     }
    ],
    "source": [
+    "# pydantic -> BaseModel -> class(BaseModel) -> 細項\n",
+    "\n",
     "from pydantic import BaseModel,Field\n",
     "\n",
     "\n",
@@ -1030,13 +1032,13 @@
     "with open('aqx_p_488-2.json',encoding='utf-8') as file:\n",
     "    content:str = file.read()\n",
     "    aqi:AQI = AQI.model_validate_json(content)\n",
+    "    #instanrs 叫出實體\n",
     "\n",
     "sites:list[Site] = aqi.records\n",
     "\n",
     "\n",
     "for site in sites:\n",
-    "    print(site)\n",
-    "    "
+    "    print(site)\n"
    ]
   }
  ],
