--- a/Lesson11/Lesson11_0.ipynb
+++ b/Lesson11/Lesson11_0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,8 @@
     "            return value\n",
     "\n",
     "class Result(BaseModel):\n",
-    "    records:list[Record]\n"
+    "    records:list[Record]\n",
+    "\n"
    ]
   },
   {
@@ -51,6 +52,8 @@
     "with open('新北市食品工廠清冊.json',encoding='utf-8') as file:\n",
     "    json_content:str = file.read()\n",
     "    all_data = json.loads(json_content)\n",
+    "\n",
+    "   \n",
     "    #pprint(all_data)\n",
     "    \n",
     "\n",
@@ -61,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1308,7 @@
    ],
    "source": [
     "for rec in result.records:\n",
-    "    print(rec)"
+    "    print(rec,)"
    ]
   }
  ],
